@@ -1,16 +1,16 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-DIST parallel-20110322.tar.bz2 163481 RMD160 8063b1acef76f123a8ef6c0ff5714ee34717f710 SHA1 b2a3ad56fcb867f561ba9e130f321258f1aa9019 SHA256 79f973daaddcae2aed67be198d15088f55787e8f4133b24d0a2642ca11f39e7d
 DIST parallel-20110422.tar.bz2 165993 RMD160 0e1334dfc0e8ee8dca0ca5dd93cb8eb385cee3d0 SHA1 04b188e48acf0c2df40c7912a12c69518c4b1bee SHA256 93de16270d6d68504b1e66893838f499c5120c75cf02efabbceb564a1520dfe7
-EBUILD parallel-20110322.ebuild 1276 RMD160 c82a57e4dc2029446db098caf181da906690a6e7 SHA1 7e3e9374b99535f292b013b0f870c4af48072a63 SHA256 55ca0a3c93f7804e0778dec4df7ede4f8ac78b81ee4fd2cb6a8ef1d9527f3000
+DIST parallel-20110522.tar.bz2 170201 RMD160 79e6eb4a67804689a056bf15d1531b923f254aee SHA1 88f29514fda71aa2137c4caa3ce86b033fb66cce SHA256 2e60c2052af9b49f8e82b5a32e19c6e9af5cb9b8bfd13717dab79a518dc867be
 EBUILD parallel-20110422.ebuild 1276 RMD160 8bd39408cc5382117eeb5275b997a7e2304d708e SHA1 3ea2ff165a84cd5e5952e334979456e3c6265711 SHA256 0869e30e043b66fbabb7bb2a0b6fbd0ef8c6af2efe715743724611082a6631b8
-MISC ChangeLog 1874 RMD160 637d714067aa1cb6c2e924dc51b32b8b68164fbb SHA1 7008bbe3f74a2e8424cec7fa83f97ee44d3c8d07 SHA256 8fc3643d890427561738b46e8bea8f590aeb46c6d8d52854dc26579553d5daa0
+EBUILD parallel-20110522.ebuild 1290 RMD160 bd03d86e6cb75f51cc5a0465f5e892a81b9385cf SHA1 6fa72e7a66cf96070a88b795f804ac71c3d15658 SHA256 3956125a092051d72d378e3fae67fb4f222fcc799f59e1f5516224bac568512b
+MISC ChangeLog 2049 RMD160 bdacba3ef96c484bcaace170c6a86d8aa3b9b5b8 SHA1 9e3006e084bf81382e640a72933ecb086ce06474 SHA256 83393e489c0914e393922fa0fa7ead8d651914a56acd2983bd3c21d426d7b4ea
 MISC metadata.xml 1112 RMD160 10814ca695996d1226bd344ec2e01c561338bed6 SHA1 d630cf2a12c471bdb1a2b9725e357e0622903c33 SHA256 553523eefd96c48fa7f568b720719c508de2631ccb78e5a9d2aa1dc362c7d0cc
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk3EedQACgkQNQqtfCuFneP40gCgilaLsFr/coR1HKyTOBwFTX9e
-w3oAnAozd2+91azKTYjvKqWpq2LaObNJ
-=PP0h
+iEYEARECAAYFAk3nO1EACgkQNQqtfCuFneP5NACfZJnoWy+xHUMDsi5HvlRcJQMs
+wjMAn0EfISppo/5aM1LjbffcoiIuYtxX
+=BsuJ
 -----END PGP SIGNATURE-----
