@@ -1,6 +1,6 @@
 # Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-process/parallel/parallel-20110322.ebuild,v 1.1 2011/04/17 15:37:42 fauli Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-process/parallel/parallel-20110522.ebuild,v 1.1 2011/06/02 07:26:49 fauli Exp $
 
 EAPI=3
 
@@ -26,12 +26,12 @@ src_configure() {
 }
 
 src_install() {
-	emake install DESTDIR="${D}" docdir=/usr/share/doc/${PF}/html || die
+	emake install DESTDIR="${D}" docdir="${EPREFIX}"/usr/share/doc/${PF}/html || die
 
 	# --program-transform-* care about only bin and man.
-	mv "${D}"/usr/share/doc/${PF}/html/{,g}parallel.html || die
+	mv "${ED}"/usr/share/doc/${PF}/html/{,g}parallel.html || die
 
-	rm -f "${D}"/usr/bin/sem || die
+	rm -f "${ED}"/usr/bin/sem || die
 	dosym gparallel /usr/bin/sem
 	dodoc NEWS README || die
 }
