@@ -1,6 +1,12 @@
 # ChangeLog for sys-process/parallel
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-process/parallel/ChangeLog,v 1.9 2011/05/06 22:44:18 fauli Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-process/parallel/ChangeLog,v 1.10 2011/06/02 07:26:49 fauli Exp $
+
+*parallel-20110522 (02 Jun 2011)
+
+  02 Jun 2011; Christian Faulhammer <fauli@gentoo.org>
+  -parallel-20110322.ebuild, +parallel-20110522.ebuild:
+  version bump and clean up
 
 *parallel-20110422 (06 May 2011)
 
